# aruco_exp

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  aruco_main.cc  link_opencv.sh  opencv_build_script.sh  opencv_build_script_mac_411.sh  scanner_main.cc
make_test/: Makefile  test_aruco.cpp
project_points/: BUILD.bazel  detect_aruco_main.cc  highgui_utils.cc  highgui_utils.h  projection.cc  projection.h  projection_main.cc  projection_test.cc  proto_utils.cc  proto_utils.h  proto_utils_test.cc
project_points/proto/: BUILD.bazel  calibration_data.proto  manifest.proto  proto_utils.cc  proto_utils.h  proto_utils_test.cc
testdata/: simple_manifest.txtpb
