cc_library(
    name = "projection",
    srcs = ["projection.cc"],
    hdrs = ["projection.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status:statusor",
    ],
)

cc_test(
    name = "projection_test",
    srcs = ["projection_test.cc"],
    data = ["//testdata"],
    deps = [
        ":projection",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "detect_aruco_main",
    srcs = ["detect_aruco_main.cc"],
    data = ["//testdata"],
    deps = [
        ":projection",
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)

cc_binary(
    name = "projection_main",
    srcs = ["projection_main.cc"],
    data = ["//testdata"],
    deps = [
        ":projection",
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)
