package(default_visibility = ["//visibility:public"])

cc_library(
    name = "projection",
    srcs = ["projection.cc"],
    hdrs = ["projection.h"],
    deps = [
        "//:opencv",
        "@absl//absl/status:statusor",
    ],
)

cc_test(
    name = "projection_test",
    srcs = ["projection_test.cc"],
    data = ["//testdata"],
    deps = [
        ":projection",
        ":proto_utils",
        "@absl//absl/status:status_matchers",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
    ],
)

cc_binary(
    name = "detect_aruco_main",
    srcs = ["detect_aruco_main.cc"],
    data = ["//testdata"],
    deps = [
        ":highgui_utils",
        ":projection",
        ":proto_utils",
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)

cc_binary(
    name = "projection_main",
    srcs = ["projection_main.cc"],
    data = ["//testdata"],
    deps = [
        ":highgui_utils",
        ":projection",
        ":proto_utils",
        "//:opencv",
        "@absl//absl/flags:flag",
        "@absl//absl/flags:parse",
        "@absl//absl/status",
        "@absl//absl/strings",
        "@gflags",
        "@glog",
        "@status_macros",
    ],
)

cc_library(
    name = "proto_utils",
    srcs = ["proto_utils.cc"],
    hdrs = ["proto_utils.h"],
    deps = [
        "//project_points:projection",
        "//project_points/proto:calibration_data_cc",
        "//project_points/proto:manifest_cc",
        "@absl//absl/status:statusor",
        "@absl//absl/strings",
    ],
)

cc_test(
    name = "proto_utils_test",
    srcs = ["proto_utils_test.cc"],
    data = ["//testdata"],
    deps = [
        ":proto_utils",
        "@absl//absl/status:status_matchers",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "@protobuf-matchers//protobuf-matchers",
    ],
)

cc_library(
    name = "highgui_utils",
    srcs = ["highgui_utils.cc"],
    hdrs = ["highgui_utils.h"],
    deps = [
        "//:opencv",
        "@absl//absl/strings",
    ],
)
